// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageNotice matches the snapshot by default 1`] = `null`;

exports[`LanguageNotice matches the snapshot when showLanguageNotice equals true 1`] = `
.c1 {
  margin: 1em 0;
}

yoast-seo.g3[id="c0"] {
  content: "c1,";
}

<p
  className="c0 c1"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . If this is not correct, contact your site administrator.
</p>
`;

exports[`LanguageNotice matches the snapshot with a changed language link 1`] = `
.c5 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

yoast-seo.g1[id="c4"] {
  content: "c5,";
}

.c1 {
  margin: 1em 0;
}

yoast-seo.g3[id="c0"] {
  content: "c1,";
}

.c3 {
  margin-left: 4px;
}

yoast-seo.g4[id="c2"] {
  content: "c3,";
}

<p
  className="c0 c1"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . 
  <a
    className="c2 c3"
    href="http://www.example.com"
    rel="noopener"
    target="_blank"
  >
    Change language
    <span
      className="c4 c5"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;

exports[`LanguageNotice matches the snapshot with another language 1`] = `
.c5 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

yoast-seo.g1[id="c4"] {
  content: "c5,";
}

.c1 {
  margin: 1em 0;
}

yoast-seo.g3[id="c0"] {
  content: "c1,";
}

.c3 {
  margin-left: 4px;
}

yoast-seo.g4[id="c2"] {
  content: "c3,";
}

<p
  className="c0 c1"
>
  Your site language is set to 
  <strong>
    Nederlands
  </strong>
  . 
  <a
    className="c2 c3"
    href="http://www.example.com"
    rel="noopener"
    target="_blank"
  >
    Change language
    <span
      className="c4 c5"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;
